--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
+    "@solana/spl-token": "^0.4.9",
     "anchor-bankrun": "^0.5.0",
     "dotenv": "^16.4.5",
     "solana-bankrun": "^0.4.0"
