--- a/programs/boring-vault-svm/Cargo.toml
+++ b/programs/boring-vault-svm/Cargo.toml
@@ -24,3 +24,4 @@ idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
 anchor-spl = "0.30.1"
 switchboard-on-demand = "0.2.2"
+rust_decimal = "1.36.0"
