--- a/programs/boring-vault-svm/Cargo.toml
+++ b/programs/boring-vault-svm/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib", "lib"]
 name = "boring_vault_svm"
 
 [features]
-default = []
+default = ["custom-heap", "custom-panic"]
 cpi = ["no-entrypoint"]
 no-entrypoint = []
 no-idl = []
@@ -17,7 +17,6 @@ no-log-ix-name = []
 custom-heap = []
 custom-panic = []
 anchor-debug = []
-solana = []
 idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [dependencies]
