--- a/Anchor.toml
+++ b/Anchor.toml
@@ -6,6 +6,7 @@ skip-lint = false
 
 [programs.localnet]
 boring_vault_svm = "26YRHAHxMa569rQ73ifQDV9haF7Njcm3v7epVPvcpJsX"
+mock_kamino_lend = "GE6jWNZWUQBkAppiqkdZeewFtr5Hmi6CwcsRHQb98CNR"
 
 [registry]
 url = "https://api.apr.dev"
@@ -16,4 +17,3 @@ wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/boring-vault-svm.ts"
-# test = "RUST_LOG=error yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
