--- a/programs/boring-vault-svm/Cargo.toml
+++ b/programs/boring-vault-svm/Cargo.toml
@@ -20,8 +20,13 @@ anchor-debug = []
 idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [dependencies]
-anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
+anchor-lang = { version = "0.30.1", features = [
+    "interface-instructions",
+    "init-if-needed",
+] }
 anchor-spl = "0.30.1"
 switchboard-on-demand = "0.2.2"
 rust_decimal = "1.36.0"
 solana-program = "1.16.24"
+spl-tlv-account-resolution = "0.4.0"
+spl-transfer-hook-interface = "0.3.0"
