--- a/programs/boring-onchain-queue/Cargo.toml
+++ b/programs/boring-onchain-queue/Cargo.toml
@@ -20,4 +20,4 @@ idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
 anchor-spl = "0.30.1"
 rust_decimal = "1.36.0"
-# boring-vault-svm = { path = "../boring-vault-svm", features = ["cpi"] }
+boring-vault-svm = { path = "../boring-vault-svm", features = ["cpi"] }
