--- a/programs/boring-vault-svm/Cargo.toml
+++ b/programs/boring-vault-svm/Cargo.toml
@@ -25,3 +25,4 @@ anchor-spl = "0.30.1"
 switchboard-on-demand = "0.2.2"
 rust_decimal = "1.36.0"
 solana-program = "1.17.18"
+mpl-token-metadata = { version = "1.13.1", features = ["no-entrypoint"] }
