add python connectors, utils, and tests

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,77 @@ node_modules
 test-ledger
 .yarn
 .env
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Python Virtual Environment
+.venv/
+venv/
+ENV/
+env/
+*/env/
+*/venv/
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+# *.manifest
+# *.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+.pytest_cache/
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytype/
+
+# Type checker
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Jupyter Notebook
+.ipynb_checkpoints
+profile_default/
+ipython_config.py
+
+# Environments
+.env
+.env.*
+
+# IDEs
+.vscode/
+.idea/
