--- a/Anchor.toml
+++ b/Anchor.toml
@@ -18,3 +18,4 @@ wallet = "~/.config/solana/id.json"
 [scripts]
 # test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/*.ts"
 test = "RUST_LOG=error yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/*.ts"
+setup_test_vault = "yarn run ts-node scripts/python_setup/setup_test_vault.ts"
