--- a/programs/boring-vault-svm/Cargo.toml
+++ b/programs/boring-vault-svm/Cargo.toml
@@ -22,3 +22,5 @@ anchor-spl = "0.30.1"
 switchboard-on-demand = "0.3.5"
 rust_decimal = "1.36.0"
 hex = "0.4.3"
+spl-token-metadata-interface = "0.3.5"
+spl-type-length-value = "0.4.6"
