--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,8 +5,8 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-boring_onchain_queue = "4yfE2VJQmxmcnUhrb8vdz7H8w313EZ3eJh5DbANBgtmd"
-boring_vault_svm = "5ZRnXG4GsUMLaN7w2DtJV1cgLgcXHmuHCmJ2MxoorWCE"
+boring_onchain_queue = "BdrvcPHStDEvM6JUS94DbTEUPkZf7nqAxERWFUG4W4kF"
+boring_vault_svm = "AZewa4rTKhbvyWH6kbqTfJUipYEs3fwgK4qpfdA4qH8e"
 
 [registry]
 url = "https://api.apr.dev"
@@ -17,4 +17,4 @@ wallet = "~/.config/solana/id.json"
 
 [scripts]
 # test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/*.ts"
-test = "RUST_LOG=error yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/*.ts"
+test = "RUST_LOG=error yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/boring-vault-svm.ts && RUST_LOG=error yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/mint-authority.ts"
