--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,74 @@
+# Rust build artifacts
 .anchor
-.DS_Store
-target
+target/
 **/*.rs.bk
-node_modules
-test-ledger
-.yarn
-.env
+Cargo.lock
+**/target/
 
-# Python virtual environment
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual Environment
 venv/
 env/
 .env/
 .venv/
 ENV/
+.python-version
+
+# Node.js
+node_modules/
+.yarn/
+package-lock.json
+yarn.lock
+
+# IDE and Editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Test and debug files
+test-ledger/
+coverage/
+.coverage
+htmlcov/
+.pytest_cache/
+.tox/
+.nox/
+.coverage.*
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+
+# Logs
+*.log
+logs/
