--- a/Anchor.toml
+++ b/Anchor.toml
@@ -7,6 +7,7 @@ skip-lint = false
 [programs.localnet]
 boring_onchain_queue = "4yfE2VJQmxmcnUhrb8vdz7H8w313EZ3eJh5DbANBgtmd"
 boring_vault_svm = "5ZRnXG4GsUMLaN7w2DtJV1cgLgcXHmuHCmJ2MxoorWCE"
+state_assert = "HA9Yp7Janz8pQr7KwK18cU8em7137bWnMbahfjZBa8RX"
 
 [registry]
 url = "https://api.apr.dev"
@@ -16,5 +17,4 @@ cluster = "Localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-# test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/*.ts"
 test = "RUST_LOG=error yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/*.ts"
