--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.30.1",
+    "@coral-xyz/anchor": "0.31.0",
     "@solana/spl-token": "^0.4.9",
     "anchor-bankrun": "^0.5.0",
     "bs58": "^6.0.0",
