--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,21 +1,20 @@
 [toolchain]
-anchor_version = "0.31.0"
+anchor_version = "0.31.1"
 
 [features]
 resolution = true
 skip-lint = false
 
 [programs.localnet]
-boring_onchain_queue = "4yfE2VJQmxmcnUhrb8vdz7H8w313EZ3eJh5DbANBgtmd"
-boring_vault_svm = "5ZRnXG4GsUMLaN7w2DtJV1cgLgcXHmuHCmJ2MxoorWCE"
+boring_onchain_queue = "FydnfBq3vZWeMizqcQhFQyYPRSsPyESGUbM1YZy1Maru"
+boring_vault_svm = "DjqVmFPSqTTJs8m1DT6GtN34JzzX9jd6WZqqfWejEyTa"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-# test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/*.ts"
 test = "RUST_LOG=error yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/*.ts"
