--- a/Anchor.toml
+++ b/Anchor.toml
@@ -6,15 +6,16 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-boring_onchain_queue = "FydnfBq3vZWeMizqcQhFQyYPRSsPyESGUbM1YZy1Maru"
-boring_vault_svm = "DjqVmFPSqTTJs8m1DT6GtN34JzzX9jd6WZqqfWejEyTa"
+boring_onchain_queue = "4yfE2VJQmxmcnUhrb8vdz7H8w313EZ3eJh5DbANBgtmd"
+boring_vault_svm = "5ZRnXG4GsUMLaN7w2DtJV1cgLgcXHmuHCmJ2MxoorWCE"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "Localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
+# test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/*.ts"
 test = "RUST_LOG=error yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/*.ts"
