--- a/Anchor.toml
+++ b/Anchor.toml
@@ -6,16 +6,15 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-boring_onchain_queue = "4yfE2VJQmxmcnUhrb8vdz7H8w313EZ3eJh5DbANBgtmd"
-boring_vault_svm = "5ZRnXG4GsUMLaN7w2DtJV1cgLgcXHmuHCmJ2MxoorWCE"
+boring_onchain_queue = "BmJ8USC2Dgt7qdRvnejE6TsukfHGjCxy13awAjxA8ioj"
+boring_vault_svm = "4HTnJCfFdcKueCRb1w7itVzGL7H8d3WZQFYFmPX5zWFF"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
+cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-# test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/*.ts"
 test = "RUST_LOG=error yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/*.ts"
