--- a/Anchor.toml
+++ b/Anchor.toml
@@ -6,14 +6,14 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-boring_onchain_queue = "BmJ8USC2Dgt7qdRvnejE6TsukfHGjCxy13awAjxA8ioj"
-boring_vault_svm = "4HTnJCfFdcKueCRb1w7itVzGL7H8d3WZQFYFmPX5zWFF"
+boring_onchain_queue = "4yfE2VJQmxmcnUhrb8vdz7H8w313EZ3eJh5DbANBgtmd"
+boring_vault_svm = "5ZRnXG4GsUMLaN7w2DtJV1cgLgcXHmuHCmJ2MxoorWCE"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "Localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
