--- a/programs/boring-vault-svm/Cargo.toml
+++ b/programs/boring-vault-svm/Cargo.toml
@@ -24,3 +24,4 @@ switchboard-on-demand = "0.3.5"
 hex = "0.4.3"
 spl-token-metadata-interface = "0.7.0"
 spl-type-length-value = "0.8.0"
+pyth-sdk-solana = "0.10"
