--- a/programs/boring-vault-svm/Cargo.toml
+++ b/programs/boring-vault-svm/Cargo.toml
@@ -25,3 +25,4 @@ hex = "0.4.3"
 spl-token-metadata-interface = "0.7.0"
 spl-type-length-value = "0.8.0"
 pyth-sdk-solana = "0.10"
+pyth-solana-receiver-sdk = "0.6.1"
