--- a/programs/layer-zero-share-mover/Cargo.toml
+++ b/programs/layer-zero-share-mover/Cargo.toml
@@ -21,4 +21,4 @@ idl-build = ["anchor-lang/idl-build"]
 anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
 anchor-spl.workspace = true
 boring-vault-svm = { path = "../boring-vault-svm" }
-
+common = { path = "../common"}
