--- a/Anchor.toml
+++ b/Anchor.toml
@@ -8,8 +8,9 @@ skip-lint = false
 [programs.localnet]
 boring_onchain_queue = "4yfE2VJQmxmcnUhrb8vdz7H8w313EZ3eJh5DbANBgtmd"
 boring_vault_svm = "5ZRnXG4GsUMLaN7w2DtJV1cgLgcXHmuHCmJ2MxoorWCE"
+endpoint = "5hkWNgGVXnwofEjDNtY5u3WUCvUUxXES5wyG4V3aEo1F"
+layer_zero_share_mover = "CU9XermEoiawu8eYwSyXBHgMESRwWEycDU9jjk9MHSgN"
 state_assert = "72mmDHDfvH1hGgo4thWjhpQRASkebRW1fjFMRzE5zimG"
-layer_zero_share_mover = "3f2EpbAR6sGNy3wUpWugtwN2EHGDbyiG8ZpySFVnmY9q"
 
 [registry]
 url = "https://api.apr.dev"
