--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -5,3 +5,8 @@ edition = "2021"
 
 [dependencies]
 anchor-lang.workspace = true
+
+[dev-dependencies]
+arbitrary = { version = "1.3", features = ["derive"] }
+quickcheck = "1.0"
+proptest = "1.0"
