greptile fixes - naming, description, fuzz test big endian top bit flip test

--- a/programs/endpoint-mock/Cargo.toml
+++ b/programs/endpoint-mock/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "endpoint"
 version = "0.1.0"
-description = "Created with Anchor"
+description = "Layer Zero Endpoint Mock Program"
 edition = "2021"
 
 [lib]
