--- a/programs/layer-zero-share-mover/Cargo.toml
+++ b/programs/layer-zero-share-mover/Cargo.toml
@@ -18,7 +18,7 @@ idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 
 [dependencies]
-anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
+anchor-lang.workspace = true
 anchor-spl.workspace = true
 boring-vault-svm = { path = "../boring-vault-svm", features = ["no-entrypoint"] }
 common = { path = "../../crates/common"}
