--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anchor-lang.workspace = true
+boring-vault-svm = { path = "../../programs/boring-vault-svm", features = ["no-entrypoint"] }
 
 [dev-dependencies]
 arbitrary = { version = "1.3", features = ["derive"] }
