add send/recv scripts, update account signatures, executor LZ endpoint passes

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "0.31.1",
+    "@layerzerolabs/lz-solana-sdk-v2": "^3.0.115",
     "@solana/spl-token": "^0.4.9",
     "anchor-bankrun": "^0.5.0",
     "bs58": "^6.0.0",
