--- a/Anchor.toml
+++ b/Anchor.toml
@@ -16,8 +16,10 @@ state_assert = "72mmDHDfvH1hGgo4thWjhpQRASkebRW1fjFMRzE5zimG"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "mainnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "RUST_LOG=error yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/*.ts"
+send_lz = "RUST_LOG=error yarn run ts-mocha -p ./tsconfig.json -t 1000000 scripts/send_lz.ts"
+receive_lz = "RUST_LOG=error yarn run ts-mocha -p ./tsconfig.json -t 1000000 scripts/receive_lz.ts"
