rm .env.example

--- a/sample.env
+++ b/sample.env
@@ -1,2 +1,4 @@
 ANCHOR_WALLET='PATH_TO_id.json'
 ALCHEMY_API_KEY='YOUR_KEY'
+SOLANA_RPC_URL="https://api.mainnet-beta.solana.com"
+DEPLOY_PATH="target/deploy/boring_vault_svm.so"
